--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities; 
+
+
+*{
+    font-family: 'Poppins', sans-serif;
+}
+
+.menuItemLInk a.active{
+    border-bottom: 2px solid #3AA39F;
+}
